--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,2 +1,12 @@
+nf_core_version: 3.2.0
 repository_type: pipeline
-nf_core_version: "2.14.0"
+template:
+  author: nf-core
+  description: An example pipeline used to test new nf-core infrastructure and common
+    code.
+  force: false
+  is_nfcore: true
+  name: testpipeline
+  org: nf-core
+  outdir: .
+  version: 1.0dev
